--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="">
-    <title></title>
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
+    <title>Bob's Burgers</title>
     <meta name="description" content="">
   </head>
 
@@ -47,5 +48,6 @@
       <img src="img/logo.png" alt="Bob's Burgers Logo">
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
   </body>
 </html>
