Add desktop styling

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
     </div>    
 
     <article>
-      <h2>World's Best <span class="heading-span">Burgers</span></h2>
+      <div class="article-content">
+        <h2>World's Best <span class="heading-span">Burgers</span></h2>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
 
-      <button>View Menu</button>
+        <button>View Menu</button>
+      </div>
 
       <img src="img/bobs-burger.png" alt="Burger Image">
     </article>
@@ -42,13 +44,17 @@
     <article class="gray-article">
       <img src="img/bob-headshot.png" alt="Headshot of Bob">
 
-      <h2>Dine-in <span class="heading-lowercase">or</span> <span class="heading-span">Take-Out</span></h2>
+      <div class="article-content">
+        <h2>Dine-in <span class="heading-lowercase">or</span> <span class="heading-span">Take-Out</span></h2>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
 
-      <button>Contact Us</button>
+        <button>Contact Us</button>
+      </div>
     </article>
 
+    <div class="spacer"></div>
+    
     <footer>
       <img src="img/logo.png" alt="Bob's Burgers Logo">
     </footer>
